; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_utils.c_ts_integer_to_internal.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_utils.c_ts_integer_to_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"unknown interval type OID %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @ts_integer_to_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ts_integer_to_internal(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %16 [
    i32 128, label %7
    i32 129, label %10
    i32 130, label %13
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @DatumGetInt64(i32 %8)
  store i32 %9, i32* %3, align 4
  br label %20

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @DatumGetInt32(i32 %11)
  store i32 %12, i32* %3, align 4
  br label %20

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @DatumGetInt16(i32 %14)
  store i32 %15, i32* %3, align 4
  br label %20

16:                                               ; preds = %2
  %17 = load i32, i32* @ERROR, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @elog(i32 %17, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32 -1, i32* %3, align 4
  br label %20

20:                                               ; preds = %16, %13, %10, %7
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @DatumGetInt64(i32) #1

declare dso_local i32 @DatumGetInt32(i32) #1

declare dso_local i32 @DatumGetInt16(i32) #1

declare dso_local i32 @elog(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
